...
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="alarms">Alarms</string>
    <string name="timers">Timers</string>
    <string name="skip_login">Or, Skip Login Here</string>
    <string name="new_alarm">New Alarm</string>
    <string name="forgot_password">Forgot Password</string>
</resources>
