...
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="31dp"
            android:textColor="?attr/colorSecondary"
            android:layout_marginTop="310dp"
            android:text="Cancel" />

        <Button
            android:id="@+id/submitbutton"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
...
